--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad:wght@700&display=swap');
+
+
+body {
+    font-family: 'Afacad', sans-serif;
+    font-size: 5rem;
+    justify-content: center;
+}
+
+.stButton>button {
+
+    background-color: #92bdd9;
+    border-radius: 1rem;
+}
+
+
+/*div[data-testid="element-container"]:nth-of-type(1)   {
+    text-align: center;
+        }
+*/
+
 button.st-emotion-cache-1bugxxb {
     padding: 2rem;
     padding-bottom: 2rem;
